# Labors-1Semester

./: .clang-format  CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
CPP/: Aufgabe4.cpp  Aufgabe6.cpp  CMakeLists.txt  tasks.json
Labor02/: Aufgabe2.c  Aufgabe3.c  Aufgabe4.c  Aufgabe5.c  Aufgabe6.c  CMakeLists.txt
Labor02/Tests/: Aufgabe1.c  Aufgabe3.c  Aufgabe4.c  Aufgabe5.c  CMakeLists.txt
Labor03/: 1Aufgabe.c  2Aufgabe.c  4Aufgabe.c  5Aufgabe.c  Aufgabe3.c  Aufgabe6.c  Aufgabe7.c  Aufgabe8.c  Aufgabe9.c  CMakeLists.txt
Labor04/: Aufgabe10.c  Aufgabe11.c  Aufgabe6.c  Aufgabe7.c  Aufgabe8.c  Aufgabe9.c  CMakeLists.txt
Labor05/: Aufgabe1.c  Aufgabe2.c  Aufgabe3.c  Aufgabe4.c  Aufgabe5.c  Aufgabe6.c  Aufgabe7.c  Aufgabe8.c  CMakeLists.txt
Labor06/: Aufgabe1.c  Aufgabe2.c  Aufgabe3.c  Aufgabe4.c  Aufgabe5.c  CMakeLists.txt
Labor07/: Aufgabe1.c  Aufgabe2.c  Aufgabe3.c  Aufgabe4.c  Aufgabe5.c  CMakeLists.txt
Labor08/: Aufgabe1.c  Aufgabe2.c  Aufgabe3.c  Aufgabe4.c  Aufgabe5.c  Aufgabe6.c  Aufgabe7.c  CMakeLists.txt
Labor09/: Aufgabe1.c  Aufgabe2.c  Aufgabe3.c  Aufgabe4.c  Aufgabe5.c  CMakeLists.txt
