cmake_minimum_required(VERSION 4.0)
project(Labor03)

add_executable(Aufgabe1 Aufgabe1.c)
add_executable(Aufgabe2 Aufgabe2.c)
add_executable(Aufgabe3 Aufgabe3.c)
add_executable(Aufgabe4 Aufgabe4.c)
add_executable(Aufgabe5 Aufgabe5.c)
add_executable(Aufgabe6 Aufgabe6.c)
add_executable(Aufgabe7 Aufgabe7.c)
add_executable(Aufgabe8 Aufgabe8.c)
add_executable(Aufgabe9 Aufgabe9.c)